# tag-ar

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/desktop/: CMakeLists.txt  main.cpp
apps/desktop/viewer/: gl_camera.cpp  gl_camera.hpp  gl_loader.hpp  mesh_renderer.cpp  mesh_renderer.hpp  render_target.cpp  render_target.hpp  shader.hpp  texture.cpp  texture.hpp  viewer.cpp  viewer.hpp
apps/desktop/viewer/shader/: mesh.frag  mesh.vert
apps/ios/TagARKit/TagARKit/: TagARKit.h  TagARKit.mm  TagARKitWrapper.cpp  TagARKitWrapper.h  wrapper.cpp  wrapper.h
apps/ios/TagARKit/TagARKit.xcodeproj/: project.pbxproj
apps/ios/TagARKit/TagARKit.xcodeproj/xcshareddata/xcschemes/: TagARKit.xcscheme
apps/ios/tag_ar.xcworkspace/: contents.xcworkspacedata
apps/ios/tag_ar_app/tag_ar_app/: AppDelegate.swift  DepthRecorder.swift  MetadataRecorder.swift  Renderer.swift  SceneDelegate.swift  ShaderTypes.h  Shaders.metal  VideoRecorder.swift  ViewController.swift  tag_ar_app-Bridging-Header.h  tracker.json
apps/ios/tag_ar_app/tag_ar_app.xcodeproj/: project.pbxproj
apps/ios/tag_ar_app/tag_ar_app.xcodeproj/xcshareddata/xcschemes/: tag_ar_app.xcscheme
apps/ios/tag_ar_app/tag_ar_app/Base.lproj/: Main.storyboard
config/: tracker.json
cpp/: CMakeLists.txt
cpp/include/tagar/: file_reader.hpp  frame.hpp  logger.hpp  one_euro_filter.hpp  pose_filter.hpp  simulator.hpp  tag.hpp  tracker.hpp  tracker_config.hpp  types.hpp
cpp/src/: file_reader.cpp  frame.cpp  tag.cpp  tracker.cpp  tracker_config.cpp
cpp/tests/: CMakeLists.txt  file_reader_test.cpp
scripts/: build_dependencies_ios.sh  build_dependencies_macos.sh  build_dependencies_ubuntu.sh
